--- a/Day3/q10.html
+++ b/Day3/q10.html
@@ -9,7 +9,13 @@
 <iframe align="right" width="50%" height="100%" src="new.html" name="iframe_a"></iframe>
 
 <p><a href="ap.html" target="iframe_a">1.Andhra Pradesh</a></p>
-<p><a href="ts.html" target="iframe_a">1.Telangana</a></p>
+<p><a href="ts.html" target="iframe_a">2.Telangana</a></p>
+<p><a href="bihar.html" target="iframe_a">3.Bihar</a></p>
+<p><a href="goa.html" target="iframe_a">4.Goa</a></p>
+<p><a href="punjab.html" target="iframe_a">5.Punjab</a></p>
+<p><a href="karnataka.html" target="iframe_a">6.Karnataka</a></p>
+<p><a href="kerala" target="iframe_a">7.Kerala</a></p>
+<p><a href=maharastra.html" target="iframe_a">8.Maharashtra</a></p>
 
 </body.
 
